--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>关注「张洪Heo」微信公众号</title>
+  <title>加入「Acrylic」QQ群</title>
   <link rel="stylesheet" href="./main.css">
   <link rel="icon" type="image/x-icon" href="./img/icon.webp">
   <link rel="apple-touch-icon" href="./img/icon-r.webp">
-  <meta name="apple-mobile-web-app-title" content="张洪Heo">
+  <meta name="apple-mobile-web-app-title" content="Acrylic">
   <link rel="bookmark" href="./img/icon.webp">
   <link rel="apple-touch-icon-precomposed" sizes="180x180" href="./img/icon-r.webp">
-  <meta name="description" content="关注张洪Heo微信公众号，获取更多最新的设计、科技、开发相关文章。">
+  <meta name="description" content="加入组织，参与开发。">
   <meta name="theme-color" content="#f6f7f8">
 </head>
 <body>
   <div class="wechatOA">
     <div class="wechat-card">
       <img src="./img/qrcode.png" class="qrcode" alt="qrcode">
-      <div class="tips">扫描二维码关注公众号</div>
+      <div class="tips">扫描二维码加群</div>
       <div class="wechatOA-card">
         <div class="wechatOA-head"></div>
         <div class="wechatOA-info">
-          <div class="wechatOA-name">张洪Heo</div>
+          <div class="wechatOA-name">Acrylic组织</div>
           <div class="wechatOA-description">分享设计与科技生活</div>
         </div>
       </div>
