--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <meta name="apple-mobile-web-app-title" content="Acrylic">
   <link rel="bookmark" href="./img/icon.webp">
   <link rel="apple-touch-icon-precomposed" sizes="180x180" href="./img/icon-r.webp">
-  <meta name="description" content="加入组织，参与开发。">
+  <meta name="description" content="加入大家庭一起交流">
   <meta name="theme-color" content="#f6f7f8">
 </head>
 <body>
   <div class="wechatOA">
     <div class="wechat-card">
-      <img src="./img/qrcode.png" class="qrcode" alt="qrcode">
+      <img src="https://tc.phpx.cn/uploads/2023/03/18/6415331d2ed6e.png" class="qrcode" alt="qrcode">
       <div class="tips">扫描二维码加群</div>
       <div class="wechatOA-card">
         <div class="wechatOA-head"></div>
